--- a/requirements.txt
+++ b/requirements.txt
@@ -1,209 +1,8 @@
-﻿absl-py==2.1.0
-altair==5.5.0
-anyio==4.2.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.2.0
-Babel==2.14.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.8.2
-cachetools==5.3.3
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.1
-contourpy==1.2.0
-cycler==0.12.1
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.9
-dm-tree==0.1.8
-emoji==2.10.1
-executing==2.0.1
-fanstatic==1.4
-fastjsonschema==2.19.1
-filelock==3.18.0
-Flask==3.0.3
-flatbuffers==23.5.26
-fonttools==4.47.2
-fqdn==1.5.1
-frozendict==2.4.6
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.43
-google-api-core==2.17.1
-google-api-python-client==2.120.0
-google-auth==2.28.1
-google-auth-httplib2==0.2.0
-google-pasta==0.2.0
-googleapis-common-protos==1.62.0
-greenlet==3.1.1
-grpcio==1.62.0
-h11==0.14.0
-h5py==3.10.0
-html5lib==1.1
-httplib2==0.22.0
-idna==3.6
-imbalanced-learn==0.13.0
-imblearn==0.0
-instagramy==4.5
-instaloader==4.10.3
-ipykernel==6.29.0
-ipython==8.20.0
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.3.2
-js==1.0
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter-events==0.9.0
-jupyter-lsp==2.2.2
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-jupyter_server==2.12.5
-jupyter_server_terminals==0.5.2
-jupyterlab==4.0.11
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-keras==3.0.5
-kiwisolver==1.4.5
-libclang==16.0.6
-libretranslatepy==2.1.1
-lxml
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.4
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==3.0.2
-ml-dtypes==0.3.2
-multitasking==0.0.11
-namex==0.0.7
-narwhals==1.14.2
-nbclient==0.9.0
-nbconvert==7.14.2
-nbformat==5.9.2
-nest-asyncio==1.6.0
-nltk==3.8.1
-node==1.2.2
-notebook_shim==0.2.3
-numpy==1.26.3
-odict==1.9.0
-opt-einsum==3.3.0
-outcome==1.3.0.post0
-overrides==7.6.0
-packaging==23.2
-pandas==2.2.0
-pandocfilters==1.5.1
-parso==0.8.3
-peewee==3.17.8
-pillow==10.2.0
-pipenv==2025.0.2
-platformdirs==4.1.0
-plumber==1.7
-prometheus-client==0.19.0
-prompt-toolkit==3.0.43
-protobuf==4.25.3
-psutil==5.9.8
-pure-eval==0.2.2
-pyarrow==15.0.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydeck==0.9.1
-Pygments==2.17.2
-pyparsing==3.1.1
-pyperclip==1.8.2
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2023.4
-pywinpty==2.0.12
-PyYAML==6.0.1
-pyzmq==25.1.2
-referencing==0.32.1
-regex==2023.12.25
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.1
-rpds-py==0.17.1
-rsa==4.9
-Sastrawi==1.0.1
-scikit-learn==1.4.1.post1
-scipy==1.12.0
-seaborn==0.13.2
-selenium==4.17.2
-Send2Trash==1.8.2
-setuptools==69.0.3
-six==1.16.0
-sklearn-compat==0.1.3
-smmap==5.0.1
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.40
-stack-data==0.6.3
-streamlit==1.40.1
-tenacity==9.0.0
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.0rc0
-tensorflow-intel==2.16.0rc0
-termcolor==2.4.0
-terminado==0.18.0
-textblob==0.17.1
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-toml==0.10.2
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.1
-translate==3.6.1
-trio==0.24.0
-trio-websocket==0.11.1
-tweet-preprocessor==0.6.0
-types-python-dateutil==2.8.19.20240106
-typing_extensions==4.12.2
-tzdata==2023.4
-upass==0.3.0
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==2.1.0
-urwid==2.5.0
-virtualenv==20.31.2
-watchdog==6.0.0
-wcwidth==0.2.13
-webcolors==1.13
-webencodings==0.5.1
-WebOb==1.8.8
-websocket-client==1.7.0
-Werkzeug==3.0.1
-wheel==0.42.0
-wordcloud==1.9.3
-wrapt==1.16.0
-wsproto==1.2.0
-xlrd==2.0.1
-yellowbrick==1.5
-yfinance==0.2.50
-zope.component==6.0
-zope.deferredimport==5.0
-zope.deprecation==5.0
-zope.event==5.0
-zope.hookable==6.0
-zope.interface==7.0.1
-zope.lifecycleevent==5.0
-zope.proxy==5.3
+numpy
+pandas
+scipy
+matplotlib
+seaborn
+scikit-learn==1.2.2
+joblib==1.3.1
+streamlit==1.24.0
