--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-numpy
-pandas
-scipy
-matplotlib
-seaborn
-scikit-learn==1.2.2
-joblib==1.3.1
-streamlit==1.24.0
+joblib==1.5.0
+matplotlib==3.10.3
+numpy==2.2.6
+pandas==2.2.3
+protobuf==6.31.0
+scikit_learn==1.6.1
+seaborn==0.13.2
+SQLAlchemy==2.0.41
+streamlit==1.45.1
